[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
exclude = tests/*,*/migrations/*,*/south_migrations/*
ignore = F403,F401

[isort]
force_single_line = True
line_length = 120
known_first_party = zsl
default_section = THIRDPARTY
not_skip = __init__.py
skip = migrations, south_migrations
