[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
exclude = tests/*,*/migrations/*,*/south_migrations/*
ignore = F403,F401,W605

[isort]
force_single_line = False
line_length = 120
future = builtins
force_sort_within_sections = true
known_first_party = zsl
default_section = THIRDPARTY
not_skip = __init__.py
skip = migrations, south_migrations, reflection_helper.py
